# ESP32-Telecom

./: .gitignore  CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt  app_main.c  color.h  credentials.example.h  intercom_constants.h  telecom_constants.h
main/tasks/: gpio_monitor.c  gpio_monitor_task.c  gpio_monitor_task.h  mqtt.c  mqtt.h  mqtt_task.c  mqtt_task.h  ota_task.c  ota_task.h  rgb.c  rgb.h  rgb_state_task.c  rgb_state_task.h  wifi.c  wifi_task.c  wifi_task.h
